# portfolio-rebalancer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: database.py  main.py  models.py  questrade_auth.py  schemas.py
backend/routers/: accounts.py  holdings.py  portfolios.py  questrade.py  snapshots.py  sync.py  targets.py
backend/services/: exchange_rates.py  price_sync.py  questrade.py  rebalancer.py  snapshots.py
docker/: supervisord.conf
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/portfolio/[id]/: page.tsx
frontend/app/portfolio/[id]/accounts/: page.tsx
frontend/app/portfolio/[id]/history/: page.tsx
frontend/app/portfolio/[id]/rebalance/: page.tsx
frontend/components/: account-dialog.tsx  allocation-chart.tsx  area-chart.tsx  date-range-selector.tsx  donut-chart.tsx  empty-state.tsx  holding-dialog.tsx  holding-form.tsx  line-chart.tsx  page-skeleton.tsx  portfolio-nav.tsx  price-sync-panel.tsx  questrade-panel.tsx  stat-card.tsx
frontend/lib/: api.ts  format.ts  types.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/pages/: AccountList.tsx  PortfolioDetail.tsx  PortfolioList.tsx  Rebalance.tsx
tests/: conftest.py  test_api.py  test_questrade_auth.py  test_rebalancer.py
