[project]
name = "portfolio-rebalancer"
version = "0.1.0"
description = "Simple portfolio allocation and rebalancing tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
